--- a/public/stylesheets/card.css
+++ b/public/stylesheets/card.css
@@ -1,30 +1,60 @@
+#divOrdenesNoInformadas{
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+}
 .card-flip {
     perspective: 1000px;
+    width: 20%;
+    z-index: 9;
+    
 }
-
-.card-flip .card-body {
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    position: relative;
-}
-
-.card-flip .front, .card-flip .back {
-    backface-visibility: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
+.card-flip.flipped{
+    z-index: 10;
+    background-color: azure;
+    position: absolute; 
     width: 100%;
     height: 100%;
 }
+.card-flip .card-body {
+    transition: transform 0.1s;
+    transform-style:flat; 
+}
+
+  .back {
+    backface-visibility: hidden;
+     position: absolute; 
+     background-color: azure;
+   
+}
+
+.front {
+    backface-visibility:visible;
+     position: relative; 
+   
+}
+
 
 .card-flip .back {
     transform: rotateY(180deg);
+    width: 100%;
+    
 }
 
 .card-flip.flipped .front {
     transform: rotateY(180deg);
+    backface-visibility: hidden;
+    
+   
 }
 
 .card-flip.flipped .back {
     transform: rotateY(0deg);
+    backface-visibility:visible;
 }
+
+
+
+
+
+
