--- a/views/administrador/menuLateral.pug
+++ b/views/administrador/menuLateral.pug
@@ -8,7 +8,7 @@ aside(class="d-flex position-fixed vh-100 " style="top: 3rem;")
    li(class="nav-item")
     a(class="nav-link" id="btnCargarOrden") Cargar orden
    li(class="nav-item")
-    a(class="nav-link" id="btnOrdenesNoInformadas") Ordenes no informadas
+    a(class="nav-link" id="btnOrdenesNoInformadas") Ordenes 
     
   
         
