--- a/views/administrador/rtaBusqueda.pug
+++ b/views/administrador/rtaBusqueda.pug
@@ -15,3 +15,4 @@ block content
               li.list-group-item.list-group-item-action &nbsp;
             if totalRegistros
               include ../paginado.pug
+              +paginado('http://localhost:3000/admins/busqueda')
