--- a/public/stylesheets/card.css
+++ b/public/stylesheets/card.css
@@ -5,7 +5,7 @@
 }
 .card-flip {
     perspective: 1000px;
-    width: 20%;
+    width: 30%;
     z-index: 9;
     
 }
@@ -54,7 +54,97 @@
 }
 
 
+.card-btn-acciones{
+    position:relative;
+    height: 1rem;
+  }
 
+  
+  .card-btn-acciones>svg {
+        position: absolute;
+        right:5px;
+  }
+  .card-btn-acciones div {
+        position: absolute;
+        top:2rem;
+        right:5px;
+  }
 
+  .card-btn-acciones ul li{
+    padding: 10px;
+    margin-bottom: 5px;
+    background-color:#FFFFFF;
+    border-radius: 4px;
+  }
 
+  
+  .card-btn-acciones ul li:hover{
+    background: #f1f1f1;
+}
 
+.card-btn-acciones ul li span{
+    margin-left:0.8rem;
+}
+  
+      .card-btn-acciones-content {
+        width: 100%;
+        background-color: #FFFFFF;
+        box-shadow: 1px 1px 20px 5px rgba(0,0,0,0.3);
+    }
+  
+
+  .hidden {
+    display: none;
+}
+
+.modal {
+    display: none; /* Ocultarlo por defecto */
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro */
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* Centrar el modal */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%; /* Ancho del modal */
+    border-radius: 10px;
+  }
+  
+  .close-button {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  .close-button:hover,
+  .close-button:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  textarea{
+   min-width: 100%;
+   max-width: 100%;
+   box-sizing: border-box;
+   padding: 6px 8px;
+   border: none;
+   border:1px solid #666;
+   box-shadow: 0px 0px 15px #0003;
+   background-color: transparent;
+   border-radius: 4px;
+   color:#eee;
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   font-size: 0.9em;
+   height: 10rem !important;
+  }
