--- a/views/administrador/navTop.pug
+++ b/views/administrador/navTop.pug
@@ -3,7 +3,7 @@ nav(class="navbar navbar-expand-lg bg-body-tertiary ")
             button(class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
               span(class="navbar-toggler-icon")
             .collapse.navbar-collapse#navbarSupportedContent 
-              form(class="d-flex mx-auto w-50" role="search" action=`/admins/busqueda/`)
+              form(class="d-flex mx-auto w-50" role="search" action=`/admins/busqueda`)
                 span.spanSearch.w-100  
                   i(class="bi bi-search")
                   input(class="me-2 inputSearchDeterminacion" type="search" placeholder="apellido/email/DNI a buscar" aria-label="Search" autofocus name="inputSearch" value=inputSearch?inputSearch:'' onfocus="this.select()" autocomplete="off")
