--- a/views/administrador/ordenesNoInformadas.pug
+++ b/views/administrador/ordenesNoInformadas.pug
@@ -1,7 +1,24 @@
+- estadosEditables=[1,2]
 .div(id="divOrdenesNoInformadas" class="oculto ")
     each orden in ordenes
         .card.m-2( class="card-flip")
             .card-body.front
+                 div(role="button" class="card-btn-acciones" onclick="toggleActions(this)") 
+                  svg(xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16")
+                   path(d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3")
+                  .card-btn-acciones-content.hidden 
+                    ul 
+                        li(role="button" onclick=`showModal(${orden.id})` id="btnEliminar" )
+                            svg(xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16")
+                             path(d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z")
+                             path(d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z")
+                            span Eliminar 
+                        if estadosEditables.includes(orden.estado.id)    
+                         li(role="button" onclick="flipCard(this)" ) 
+                              svg(xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16")
+                               path(d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325")
+                              span Editar
+   
                  h5.card-title= `Orden: ${orden.id}`
                  p.card-text= `Fecha: ${new Date(orden.fecha).toLocaleDateString('es-AR')}`
                  p.card-text= `Medico: ${orden.medico.nombre}`
@@ -20,9 +37,30 @@
                          tr(class=muestra.isPresentada ? '' : 'not-presented')
                              td= muestra.muestra
                              td= muestra.isPresentada ? "si" : "no"
-             button.btn.btn-primary.card-btn-editar(onclick="flipCard(this)") Editar
             .card-body.back
                 - const edit=true
-                +formOrden("divFormOrden2", true,orden)                
-                
+                +formOrden("divFormOrden2", true,orden) 
+    div(id="divEliminarOrden", class="modal")
+     div(class="modal-content")
+       span(class="close-button") &times;
+       h2 Motivo de eliminación
+       form(action=`/admins/orden?_method=delete`  method="post" name="formEliminarOrden")
+        input(type="hidden" name="PacienteId" value=paciente.id)
+        input(type="hidden" name="OrdenId")
+        .form-floating.mb-3
+         textarea(class="form-control", 
+                  id="motivo", 
+                  name="motivo",
+                  wrap="hard",
+                  rows=6, 
+                  placeholder="Escribe el motivo")
+         label(for="motivo") Motivo:
+        button(class='btn btn-outline-secondary' type="submit") Confirmar            
+script.
+     function toggleActions(element){
+      const accionesContent = element.querySelector('.card-btn-acciones-content');
+     if (accionesContent) {
+       accionesContent.classList.toggle('hidden');
+     }
+     }       
 
