--- a/views/administrador/soloForm.pug
+++ b/views/administrador/soloForm.pug
@@ -1,6 +1,7 @@
 
 .container.d-flex.justify-content-center(id="divForm" class=editarPaciente?"oculto":"")
     form(action=editarPaciente?`/admins/paciente/${usuario.id}?_method=put`:`/admins/paciente/` , method="post" class="needs-validation  mt-5  w-50 " name="formu" novalidate )                       
+        input(type="hidden" name="PacienteId" value=paciente.id)
         .row.text-center
             h1(class="h3 mb-3 fw-normal")
                     | Datos del paciente
@@ -26,6 +27,11 @@
         .row                      
             .col        
                 .form-floating
+                    input(type="number" class="form-control" id="edad"  name="edad"  value=paciente?paciente.edad:'')
+                    label(for="edad") Edad                
+        .row                      
+            .col        
+                .form-floating
                     input(type="tel" class="form-control" id="telefono"  name="telefono"  value=telefonos && telefonos.length>0?telefonos[0].numero:'')
                     label(for="telefono") Teléfono                
         .row                      
@@ -39,7 +45,7 @@
                 .form-check
                     label(class="form-check-label") Masculino 
                         input(type="radio" name="sexo" value="Masculino"  class="form-check-input" 
-                              checked=paciente? (paciente.sexo==='Hombre'?true:false)
+                              checked=paciente? (paciente.sexo==='Masculino'?true:false)
                                               :true
                               )
                 .form-check
