--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,13 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  
+  margin: 0;
+  color: #333;
+  background-color: #fff;
+  font-family: "Lato",sans-serif;
+  padding: 0;
+  font-size: 14px;
+  line-height: 22px
 }
+
 
 
 .btnVerMas {
