--- a/views/administrador/formOrden.pug
+++ b/views/administrador/formOrden.pug
@@ -1,5 +1,5 @@
 mixin formOrden(divFormOrden, editarOrden,orden)
- .container.d-flex.justify-content-center(id=divFormOrden class=editarOrden?"":"oculto")
+ .container.d-flex.justify-content-center(id=divFormOrden class=((editarOrden) || (editarOrden===false && origen==='postOrden')) ?"":"oculto")
   form(action=editarOrden?`/admins/orden?_method=put`:`/admins/orden/` method="post" class="formOrden")
       input(type="hidden" name="PacienteId" value=paciente.id)
       input(type="hidden" name="MedicoId" value=editarOrden?orden.medico.id:'')
@@ -51,27 +51,7 @@ mixin formOrden(divFormOrden, editarOrden,orden)
                                                                                                                        orden.isUrgente === 1?true:false ))
           label(class="form-check-label" for="flexRadioDefault3") Urgente
 
-      if(editarOrden)
-       .row.mt-4.justify-content-center
-        .col-md-auto.d-flex.align-items-center
-         table.table.card-text
-                  caption Muestras requeridas
-                  thead
-                      tr
-                          th Muestra
-                          th Presentada
-                  tbody
-                      each muestra in orden.muestrasRequeridas
-                          tr(class=muestra.isPresentada ? '' : 'not-presented')
-                              td= muestra.muestra
-                              td= muestra.isPresentada ? "si" : "no"
-                              td 
-                               input(
-                                      type="checkbox",
-                                      name=`muestrasRequeridas`,
-                                      value=`${muestra.id}`,
-                                      checked=muestra.isPresentada
-                                    )
+      
 
       .row.mt-4.justify-content-center
        .col-md-auto.d-flex.align-items-center
@@ -89,7 +69,8 @@ mixin formOrden(divFormOrden, editarOrden,orden)
             if editarOrden           
              each examen in orden.examenes 
               li(class="liExamenes")= `${examen.codigo}-${examen.nombre}`
-              input(type="hidden" name="examenes" value= `${examen.codigo}-${examen.nombre}`)
+               input(type="hidden" name="examenes" value= `${examen.codigo}-${examen.nombre}`)
+               input(type="hidden" name="examenesId" value= `${examen.id}`)
       .row.mt-5.justify-content-center 
        if editarOrden  
         .col-md-auto.d-flex.justify-content-center 
@@ -99,6 +80,8 @@ mixin formOrden(divFormOrden, editarOrden,orden)
        else    
         .col-md-auto.d-flex.justify-content-center 
          button.btn.btn-secondary Enviar
+
+    
  
  
  script( type="module" src='/javascripts/administrador/formOrden.js')
