--- a/views/administrador/ordenesNoInformadas.pug
+++ b/views/administrador/ordenesNoInformadas.pug
@@ -1,5 +1,5 @@
 - estadosEditables=[1,2]
-.div(id="divOrdenesNoInformadas" class="oculto ")
+.div(id="divOrdenesNoInformadas" class=(origen==='putOrden' || origen==='deleteOrden') ?"":"oculto ")
     each orden in ordenes
         .card.m-2( class="card-flip")
             .card-body.front
@@ -39,7 +39,30 @@
                              td= muestra.isPresentada ? "si" : "no"
             .card-body.back
                 - const edit=true
-                +formOrden("divFormOrden2", true,orden) 
+                +formOrden("divFormOrden2", true,orden)
+                .row.mt-4.justify-content-center
+                 .col-md-auto.d-flex.align-items-center
+                  table.table.card-text
+                           caption Muestras requeridas
+                           thead
+                               tr
+                                   th Muestra
+                                   th Presentada
+                                   th Presentar
+                           tbody
+                               each muestra in orden.muestrasRequeridas
+                                   tr(class=muestra.isPresentada ? '' : 'not-presented')
+                                       td= muestra.muestra
+                                       td= muestra.isPresentada ? "si" : "no"
+                                       td 
+                                        input(
+                                               type="checkbox",
+                                               name=`muestrasRequeridas`,
+                                               value=`${muestra.id}`,
+                                               checked=muestra.isPresentada
+                                             )
+                                       td 
+                                        a(href="http://localhost:3000/admins/pdf") imprimir etiqueta    
     div(id="divEliminarOrden", class="modal")
      div(class="modal-content")
        span(class="close-button") &times;
