--- a/views/tecBioq/layout.pug
+++ b/views/tecBioq/layout.pug
@@ -19,6 +19,8 @@ html
       link(rel='stylesheet', href='/stylesheets/tecbioq/menuLateralExamen.css')
       link(rel='stylesheet', href='/stylesheets/tecbioq/inputSearch.css')
       link(rel='stylesheet', href='/stylesheets/tecbioq/examenDatos.css')
+      link(rel='stylesheet', href='/stylesheets/tecbioq/divContent.css')
+      link(rel='stylesheet', href='/stylesheets/tecbioq/formExamen.css')
   body 
     header( style="top: 0; background-color: #f0f0f0;width:100%")
       block header
@@ -26,7 +28,7 @@ html
     
     main(class="d-flex  position-relative" )
       block aside
-      div(id="divContent" class="col-md-6")
+      div(id="divContent" )
         block content
          include ./inputSearch.pug
          include ./listaExamenes.pug
