--- a/views/tecBioq/menuLateralExamen.pug
+++ b/views/tecBioq/menuLateralExamen.pug
@@ -7,7 +7,7 @@ aside(class="d-flex position-fixed vh-100 " style="top: calc(var(--header-height
      p= examen.nombre
    li(class="nav-item")
     a(class="nav-link" id="btnDeterminacion" href=`http://localhost:3000/tecBioq/examen/${examen.id}/addCategDet`) 
-     p Agregar 
+     p Agregar/Eliminar 
      p categoría/determinaciones
    li(class="nav-item")
     a(class="nav-link" id="btnParametro") 
