--- a/views/tecBioq/addCategDet.pug
+++ b/views/tecBioq/addCategDet.pug
@@ -7,17 +7,8 @@ block content
         include ./rtaCargarOrden.pug
   .container      
    form(action=`http://localhost:3000/tecBioq/examen/${examen.id}/addCategDet` method="POST" name="formExamen" )
-    .form-div(style="margin-bottom:2rem;")
-     .divMostrarTabla.form-div 
-      svg(xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#261290" class="bi bi-plus-circle" viewBox="0 0 16 16")
-       path(d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16")
-       path(d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4")
-       span.hover-link Categorías para las determinaciones: 
-     svg(xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#261290" class="bi bi-x-circle tablaCategorias-cruz hidden" viewBox="0 0 16 16")
-       path(d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16")
-       path(d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708")
     
-    #divTabla.hidden
+    #divTabla
       table(class="table") 
        thead
         tr
@@ -25,6 +16,23 @@ block content
          th(scope="col") Determinaciones
          th(scope="col") #
        tbody(class="table-group-divider")
+        if categorias
+         each categoria in categorias  
+          tr
+             td= categoria.nombre
+             td
+              if categoria.ExCategDeterminacions.length>0
+               ul
+                each determinacion in categoria.ExCategDeterminacions
+                  li= determinacion.Determinacion.nombre
+                   button(type="button" class="btn btn-close danger btn-sm")
+              
+             td(class="text-center")
+              a(href=`http://localhost:3000/tecBioq/categ/${examen.id}/${categoria.id}`)
+                svg(tabindex="0" xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#261290" class="bi bi-x-circle" viewBox="0 0 16 16")
+                 path(d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16")
+                 path(d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708")
+             
        tfoot 
          th.btnAddRow(scope="row")
           div(role="button" tabindex="0") 
