--- a/views/tecBioq/menuLateralExamen.pug
+++ b/views/tecBioq/menuLateralExamen.pug
@@ -10,6 +10,6 @@ aside(class="d-flex position-fixed vh-100 " style="top: calc(var(--header-height
      p Agregar/Eliminar 
      p categoría/determinaciones
    li(class="nav-item")
-    a(class="nav-link" id="btnParametro") 
+    a(class="nav-link" id="btnParametro" href=`http://localhost:3000/tecBioq/examen/${examen.id}/addCategParam`) 
      p Agregar 
      p categoría/parámetros
