--- a/public/stylesheets/tecbioq/addCategDet.css
+++ b/public/stylesheets/tecbioq/addCategDet.css
@@ -65,7 +65,19 @@
 .tabla-td-actions{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
+  justify-content: start;
 }
 
 
+
+
+input.noInput:disabled {
+  border: none !important;           /* Quita el borde */
+  background-color: transparent !important; /* Fondo transparente */
+  outline: none !important;           /* Quita el contorno al recibir foco */
+  box-shadow: none !important;        /* Quita cualquier sombra */
+  cursor: default !important;         /* Cursor normal */
+  color: inherit !important;          /* Hereda el color del contenedor */
+  font: inherit !important;           /* Hereda la fuente */
+}
