--- a/views/tecBioq/addCategDet.pug
+++ b/views/tecBioq/addCategDet.pug
@@ -7,8 +7,8 @@ block content
         include ./rtaCargarOrden.pug
   include ./tablaCategDet.pug      
   .container      
-   +tablaCategDet(false,categorias)
-   +tablaCategDet(true)
+   +tablaCategDet(false,"tabla1")
+   +tablaCategDet(true,"tabla2")
    
     
           
